<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:layout_alignParentLeft="true"
    android:layout_alignParentTop="true"
    android:background="@drawable/bng"
    android:gravity="center"
    android:orientation="vertical" >

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="156dp"
        android:layout_height="159dp"
        android:contentDescription="@string/applicationLogo"
        android:src="@drawable/logo" />

    <Spinner
        android:id="@+id/spinner1"
        android:layout_width="wrap_content"
        android:gravity="center"
        android:layout_height="wrap_content" />

    <EditText
        android:id="@+id/editText1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:digits="0123456789qwertzuiopasdfghjklyxcvbnmABCDEFGHIJKLMNOPQRSTUVWXYZ_-"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/nicknameHint"
        android:inputType="text"
        android:lines="1"
        android:maxLength="20"
        android:maxLines="1" >

        <requestFocus />
    </EditText>

    <Button
        android:id="@+id/button1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/connectButton"
        android:background="@drawable/button_style"
        style="@style/button_style" />

</LinearLayout>
