<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/bng">
    <LinearLayout
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:gravity="center"
    android:orientation="vertical" >
	    <RelativeLayout
	    	android:layout_width="fill_parent"
	    	android:layout_height="wrap_content"
	    	android:gravity="center">
		    <Button
		        android:id="@+id/refreshButton"
		        android:layout_width="150dp"
		        android:layout_height="wrap_content"
		        android:text="@string/refreshButton"
		        android:background="@drawable/button_style"
		        style="@style/button_style" />
		    <Button
		        android:id="@+id/createButton"
		        android:layout_width="150dp"
		        android:layout_height="wrap_content"
		        android:layout_toRightOf="@id/refreshButton"
		        android:text="@string/createButton"
		        android:background="@drawable/button_style"
		        style="@style/button_style" />

	    </RelativeLayout>

	    <TextView
	        android:id="@+id/textView1"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/lobbyText"
	        android:textColor="#ffffff"
	        android:textSize="32sp"
	        android:shadowColor="#000000"
	    	android:shadowDx="1"
	    	android:shadowDy="1"
	    	android:shadowRadius="2" />

	    <LinearLayout
	        android:id="@+id/roomLayout"
	        android:animateLayoutChanges="true"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:gravity="center"
	        android:orientation="vertical" >
	    </LinearLayout>

    </LinearLayout>

</ScrollView>
